2009-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in: Let the configure script show a short summary
	about which modules are in and out, only check for ioperm() if
	ddl-s88 module is used, use AC_HELP_STING to format "configure
	--help" messages

2009-08-18 Matthias Trute <mtrute@users.sourceforge.net>
	* src/loopback.c src/li100.c: copy the cmdTime() from
	ib.c, only a temporary solution to avoid compilation errors
	when disabling the ib module.
	* configure.in src/Makefile.am config-srcpd.c config-srcpd.h:
	option to disable all modules except loopback

2009-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.c: Create error message if unvalid verbosity
	value is detected. Reset wrong value to maximum limit.
	* configure.in, src/Makefile.am, config-srcpd.c: Configure
	option to disable loconet module added

2009-06-28 Matthias Trute <mtrute@users.sourceforge.net>
	* README.loconet: New document that describes some
	loconet specific stuff.

2009-06-28 Matthias Trute <mtrute@users.sourceforge.net>
	* loconet.c: improved loconet communication, internal code 
	cleanups

2009-06-24 Guido Scholz <guido.scholz@bayernline.de>
	* clientservice.c, srcp-server.h, srcpd.c: Improved server
	message string handling.
	* srcpd.c: Report error, if chdir() fails.

2009-06-21 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.*, io.*: Removed sys/param.h dependency. Fixed
	compiler warning.

2009-01-31 Guido Scholz <guido.scholz@bayernline.de>
	* zimo.c: Support for GA switching added. Thread event loop
	design cleaned up. New Copyright/License header according to GPL
	rules (http://www.fsf.org/licensing/licenses/gpl-howto.html).
	* dcc-address.*: Basic functions to map address/port values
	between NMRA and Lenz-DCC address scheme added.
	* ddl.c, ddl-s88.c, hsi-88.c, i2c-dev.c, ib.c, li100.c,
	loconet.c, loopback.c, m605x.c, selectrix.c, zimo.c,
	config-srcpd.c: Harmonized usage of "comment" tag.
